--- a/Dockerfile.ignore
+++ b/Dockerfile.ignore
@@ -9,7 +9,7 @@ COPY ./requirements.txt /app/requirements.txt
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install --no-cache-dir -r requirements-small.txt
 
 # Copy the rest of the backend application code into the container at /app
 COPY ./backend/app /app/app
