feat: Optimize for production deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,20 +4,21 @@ FROM python:3.11-slim
 # Set the working directory in the container
 WORKDIR /app
 
-# Copy the production requirements file into the container at /app
-COPY ./requirements.prod.txt /app/requirements.txt
+# Best Practice: Copy only the requirements file first to leverage Docker's build cache.
+# This prevents re-installing dependencies every time you change your code.
+COPY ./requirements.txt /app/requirements.txt
 
 # Install production dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code. These paths are relative to the 'backend' directory.
+# Now copy the rest of your application code
 COPY ./app /app/app
 COPY ./sample_data /app/sample_data
 
-# EXPOSE is now more of a documentation step; the critical part is the CMD.
+# EXPOSE is good for documentation but doesn't affect Render's port mapping
 EXPOSE 8000
 
-# Run the app with Gunicorn, using the $PORT variable provided by Render.
-CMD ["gunicorn", "-w", "2", "-k", "uvicorn.workers.UvicornWorker", "app.main:app", "--bind", "0.0.0.0:$PORT"]
-
+# --- THE FIX IS HERE ---
+# Use the "shell form" (no brackets) to enable shell processing for the $PORT variable.
+CMD gunicorn -w 2 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:$PORT
