Changes for deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,6 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Best Practice: Copy only the requirements file first to leverage Docker's build cache.
-# This prevents re-installing dependencies every time you change your code.
 COPY ./requirements.txt /app/requirements.txt
 
 # Install production dependencies
@@ -16,9 +15,11 @@ RUN pip install --no-cache-dir --upgrade pip && \
 COPY ./app /app/app
 COPY ./sample_data /app/sample_data
 
-# EXPOSE is good for documentation but doesn't affect Render's port mapping
+# EXPOSE is good for documentation
 EXPOSE 8000
 
-# --- THE FIX IS HERE ---
-# Use the "shell form" (no brackets) to enable shell processing for the $PORT variable.
-CMD gunicorn -w 2 -k uvicorn.workers.UvicornWorker app.main:app --bind 0.0.0.0:$PORT
+# --- THE FINAL FIX IS HERE ---
+# Use the "shell form" for variable substitution.
+# Add the --preload flag to load the model once, before workers start.
+# Start with just one worker to be safe on the free tier.
+CMD gunicorn -w 1 -k uvicorn.workers.UvicornWorker --preload app.main:app --bind 0.0.0.0:$PORT
